HTML (1) Import fontawesome icon databse js (2) Add Header Company Web Name, Weather section (3) Add Header Nav Button for different article section
SCSS
(1) Header id=Head, id=weather style
(2) Add SASS modules/_variable.scss for variables
(3) Add Navigation section style and 8 Buttons style

--- a/sass/modules/_variables.scss
+++ b/sass/modules/_variables.scss
@@ -1,1 +1,16 @@
+$xxxl-header-font-size: 80px;
+$xxl-header-font-size: 65px;
+$xl-header-font-size: 50px;
+$l-header-font-size: 45px;
+$header-font-size: 35px;
+$sub-header-font-size: 30px;
+$m-font-size: 25px;
+$s-font-size: 20px;
+$ms-font-size: 18px;
+$xs-font-size: 16px;
+$xxs-font-size: 10px;
+
+
+$colors-nav: #e95bba, #64af64, #5252e2, #e49059;
+$nav-item: 8;
 
