(1) Add Section - Home - First Page of the Web
(2) Design the Tab Button script with hover and press to display the
corresponding article by tab-data return element ID

--- a/sass/modules/_variables.scss
+++ b/sass/modules/_variables.scss
@@ -10,7 +10,10 @@ $ms-font-size: 18px;
 $xs-font-size: 16px;
 $xxs-font-size: 10px;
 
+$article-border-radius: 10px;
+
 
 $colors-nav: #e95bba, #64af64, #5252e2, #e49059;
 $nav-item: 8;
 
+$section-color: rgb(250, 250, 250);
