(1) Add Section - News
(2) Add createIcon.js to create specific icon in auto
- used to create "star" icon for different rating

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -169,6 +169,16 @@ section{
       color: #db9f1f;
     }
 
+
+  #section-news{
+    p{
+      text-align: center;
+    }
+
+    .star-rating{
+      display: flex;
+      justify-content: center;
+    }
   }
 
 
