--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,11 @@
 @import 'modules/typography';
 @import 'modules/variables';
 
+:root{
+  --m-font-size: #{$m-font-size};
+  --sub-header-font-size: #{$sub-header-font-size};
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -178,6 +183,15 @@ section{
     .star-rating{
       display: flex;
       justify-content: center;
+    }
+  }
+
+  #section-map{
+    #map-container{
+      width: 100%;
+      height: 100%;
+      position: relative;
+      display: inline-block;
     }
   }
 
