(1) Add Section - Ticket

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -195,6 +195,16 @@ section{
     }
   }
 
+  #section-ticket{
+    i{
+      color: #ea9739;
+    }
+
+    p strong{
+      color: rgb(230, 78, 103);
+    }
+  }
+
 
   }
 
