(1) Add Section - FAQ (2) Add script to hover and expand the FAQ content

--- a/sass/modules/_variables.scss
+++ b/sass/modules/_variables.scss
@@ -12,8 +12,12 @@ $xxs-font-size: 10px;
 
 $article-border-radius: 10px;
 
+$scroll-Y-display-to-top-button: 220;
+
+$other-topics-max-char-display: 150;
 
 $colors-nav: #e95bba, #64af64, #5252e2, #e49059;
 $nav-item: 8;
 
 $section-color: rgb(250, 250, 250);
+$question-background-color: rgb(233, 220, 220);
