--- a/sass/style.scss
+++ b/sass/style.scss
@@ -189,6 +189,9 @@ section{
       }
     }
 
+    span{
+      margin: 10px;
+    }
   }
 
   #section-home{
@@ -271,6 +274,37 @@ section{
     }
   }
 
+  #section-contact{
+    i{
+      color: #6b717b;
+    }
+
+    #contact{
+      @include flexContainer(row, space-around, center);
+      font-size: $xs-font-size;
+      margin: 15px;
+    }
+
+    input, button{
+      border: none;
+      border-radius: 4px;
+      background-color: rgb(207, 192, 173);
+      padding: 5px;
+      font-size: $s-font-size;
+    }
+
+    button{
+      padding: 10px 20px;
+      &:hover{
+        background-color: #c96826;
+      }
+    }
+
+    #section-contact-img{
+      border-radius: 8px;
+      margin: 25px;
+      box-shadow: rgba(66, 53, 53, 0.35) 10px 20px 20px;
+    }
   }
 
   #home-logo{
