--- a/sass/style.scss
+++ b/sass/style.scss
@@ -375,3 +375,10 @@ section{
   }
 }
 
+// Media queries
+
+// TABLE VIEW DESIGN
+@media screen and (min-width: 600px) {
+  @import 'screens/tablet';
+}
+
