--- a/sass/style.scss
+++ b/sass/style.scss
@@ -382,3 +382,7 @@ section{
   @import 'screens/tablet';
 }
 
+// DESKTOP VIEW DESIGN
+@media screen and (min-width: 1000px) {
+  @import 'screens/desktop';
+}
